--- a/app/components/aside.html
+++ b/app/components/aside.html
@@ -1,1 +1,17 @@
+<aside class="aside">
+	<h2 class="aside__title">Title</h2>
+	<p class="aside__subtitle">Text with description</p>
+
+	<ul class="aside__list">
+		<li>
+			<a href="#" class="aside__list-item">Text item</a>
+		</li>
+		<li>
+			<a href="#" class="aside__list-item">Text item</a>
+		</li>
+		<li>
+			<a href="#" class="aside__list-item">Text item</a>
+		</li>
+	</ul>
+</aside>
 
