--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,5 @@
 // Сonnecting SCSS files for a project
-@use 'optimize';
+@use 'optimize'; // reset.css
 @use 'vars' as *;
 @use 'mixins';
 @use 'fonts';
