--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,5 @@
-@use 'vars' as *;
-@use 'mixins' as *;
+@use 'vars';
+@use 'mixins';
 
 // ==== RESET optimize.css ====
 /* Author: Andriy Ovcharov | E-mail: ovcharovcoder@gmail.com | License: MIT | Version: 1.0.0 */
